--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-REACT_APP_FACEBOOK_ACCOUNT = https://www.facebook.com/profile.php?id=100009827053300
-REACT_APP_INSTAGRAM_ACCOUNT = https://www.instagram.com/genovlachezar/
+REACT_APP_LINKEDIN_ACCOUNT = https://www.linkedin.com/in/lachezar-genov-964636309/
